[gd_scene load_steps=2 format=3 uid="uid://cf2baae5v3nrg"]

[ext_resource type="Script" path="res://Scenes/HexGridTool/GUI/Presets_window.gd" id="1_raiiu"]

[node name="PopupPanel" type="PopupPanel"]
title = "Presets"
size = Vector2i(224, 188)
visible = true
unresizable = false
borderless = false
content_scale_mode = 1
script = ExtResource("1_raiiu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 184.0

[node name="LeftMargin" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2i(20, 0)
offset_right = 20.0
offset_bottom = 180.0

[node name="RowsBox" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
offset_left = 24.0
offset_right = 162.0
offset_bottom = 180.0

[node name="TopMargin" type="MarginContainer" parent="HBoxContainer/RowsBox"]
custom_minimum_size = Vector2i(20, 20)
offset_right = 138.0
offset_bottom = 20.0

[node name="SaveRow" type="HBoxContainer" parent="HBoxContainer/RowsBox"]
offset_top = 24.0
offset_right = 138.0
offset_bottom = 55.0
alignment = 1

[node name="SaveAsButton" type="Button" parent="HBoxContainer/RowsBox/SaveRow"]
unique_name_in_owner = true
offset_right = 67.0
offset_bottom = 31.0
text = "Save As"

[node name="NameInsert" type="LineEdit" parent="HBoxContainer/RowsBox/SaveRow"]
unique_name_in_owner = true
offset_left = 71.0
offset_right = 138.0
offset_bottom = 31.0

[node name="BottomMargin" type="MarginContainer" parent="HBoxContainer/RowsBox"]
custom_minimum_size = Vector2i(20, 20)
offset_top = 59.0
offset_right = 138.0
offset_bottom = 79.0

[node name="RightMargin" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2i(20, 0)
offset_left = 166.0
offset_right = 186.0
offset_bottom = 180.0
